Columna izquierda done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
   <title>The New York Times</title>
 </head>
@@ -18,14 +19,23 @@
   </div>
   <hr>
   <main>
-    <section class="primera-columna">
+    <section class="columna-izquierda">
       <article>
+        <div class="parte-superior">
+          <h2>Lorem ipsum <br> dolor sit <br> amet</h2>
+          <hr>
+          <h3>Lorem ipsum</h3>
+          <hr>
+          <p>Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit.</p>
+          <hr>
+          <span>By Danny Hakim</span>
+        </div>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, dolores minima. Nisi sapiente porro rem recusandae tenetur iusto, sit explicabo assumenda voluptatum officia deleniti atque, saepe doloribus adipisci incidunt fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa impedit veniam harum minima, beatae nulla tempora eligendi soluta doloribus voluptas quos, magnam temporibus! Aut totam nam amet velit laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ipsam fugit nobis quidem sit at labore, necessitatibus, voluptatibus facere optio alias facilis laudantium! Eveniet assumenda porro sint corrupti culpa iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quisquam fugit sed enim officiis dolore laborum aut velit autem cupiditate earum dolorum illum minima harum qui praesentium odit necessitatibus repellendus!
         </p>
       </article>
     </section>
-    <section class="segunda-columna">
+    <section class="columna-derecha">
       <article>
         <img src="./images/obama.jpg" alt="">
         <h3>romney and obama brimley from start</h3>
