Obama notice done

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </article>
     </section>
     <section class="columna-derecha">
-      <article>
+      <article class="obama-notice">
         <img src="./images/obama.jpg" alt="">
-        <h3>romney and obama brimley from start</h3>
+        <h2>Romney and Obama Brimley From Start</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident soluta sit voluptatum delectus voluptates facilis atque labore possimus voluptatibus doloremque iusto odio assumenda, ducimus quod amet ipsam dicta non error?</p>
       </article>
       <article>
