Central article done

--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
         <h2>Romney and Obama Brimley From Start</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident soluta sit voluptatum delectus voluptates facilis atque labore possimus voluptatibus doloremque iusto odio assumenda, ducimus quod amet ipsam dicta non error?</p>
       </article>
-      <article>
-        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+      <article class="central-article">
+        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, magnam quaerat recusandae totam earum tenetur aliquam eligendi pariatur molestias officia numquam atque dicta natus itaque. Exercitationem ea impedit facere quas.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?</p>
+          <div>
+            <h4>Lorem ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, magnam quaerat recusandae totam earum tenetur aliquam eligendi pariatur molestias officia numquam atque dicta natus itaque. Exercitationem ea impedit facere quas.</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?Exercitationem ea impedit facere quas.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?Exercitationem ea impedit facere quas.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?Exercitationem ea impedit facere quas.</p>
         </div>
       </article>
       <article>
