Last article done

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, modi excepturi at aliquid perferendis delectus quaerat saepe placeat ab recusandae ipsum, sequi, ea molestiae quam? Provident dolores ad cumque voluptate?Exercitationem ea impedit facere quas.</p>
         </div>
       </article>
-      <article>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-        <div class="ultima-seccion">
-          <div class="texto">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nostrum inventore laudantium nam facere iusto numquam reiciendis praesentium nobis. Pariatur animi quibusdam accusantium commodi optio voluptatum molestiae nesciunt itaque odio.</p>
-            <div class="capital">
+      <article class="last-article">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+        <div class="text-and-image">
+          <div class="text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nostrum inventore laudantium nam facere iusto numquam reiciendis praesentium nobis. Pariatur animi quibusdam accusantium commodi optio voluptatum molestiae nesciunt itaque odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis natus, nulla dolores consequuntur totam, tempora sunt ex accusantium voluptatibus laborum inventore, amet tempore placeat quas vel iste perspiciatis soluta eaque! </p>
+            <div class="square">
               <span>Lorem ipsum</span>
             </div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto repudiandae dolorum eius quod molestias eveniet praesentium sit soluta. Voluptatibus modi voluptatum ipsa neque ullam voluptate eos optio temporibus expedita odit?</p>
